# discrete_bif

./: README.md
bif/: CMakeLists.txt  ds_derivatives.cpp  ds_derivatives.hpp  ds_func.cpp  ds_func.hpp  dynamical_system.cpp  dynamical_system.hpp  essential.hpp  main.cpp  newton.cpp  newton.hpp  sys_common.hpp  sys_func.cpp  y3PD2.json  y3PD4.json  y3PD8.json
bif/cmake-tree/: CMakeLists.txt
bif/cmake-tree/include/: essential.hpp
bif/cmake-tree/src/: main.cpp  newton.cpp  sys_func.cpp
bif/input/: NS3.json  y3PD2.json
bif_ns/: 3NS.json  CMakeLists.txt  ds_derivatives.cpp  ds_func.cpp  ds_func.hpp  dynamical_system.cpp  dynamical_system.hpp  eigensolver.cpp  main.cpp  newton.cpp  newton.hpp  ns.json  sys_common.hpp
bif_ns/input/: y3PD2.json
fix/: CMakeLists.txt  ds_derivatives.cpp  ds_derivatives.hpp  ds_func.cpp  ds_func.hpp  dynamical_system.cpp  dynamical_system.hpp  eigensolver.cpp  eigensolver.hpp  main.cpp  newton.cpp
pp/: dynamical_system.hpp  main.cpp  main.pro  mainwindow.cpp  mainwindow.h  pptools.py  sys_func.cpp
pp/cmake-tree/: CMakeLists.txt
pp/cmake-tree/include/: mainwindow.h
pp/cmake-tree/src/: dynamical_system.cpp  mainwindow.cpp  sys_func.cpp
pp/input/: y3PD2.json
pp_qt/: dynamical_system.cpp
theory/: theory.tex
